:active:hover allows for a button downstate only when a cursor went down on a control, and is over it

--- a/source/css/Icon.css
+++ b/source/css/Icon.css
@@ -6,6 +6,6 @@
 	vertical-align: middle;
 }
 
-.onyx-icon.active, .onyx-icon:active {
+.onyx-icon.active, .onyx-icon:active:hover {
 	background-position: 0 -32px;
 }
