--- a/source/css/Button.css
+++ b/source/css/Button.css
@@ -52,7 +52,7 @@
 	box-shadow: inset 0px 1px 0px rgba(0,0,0,0.1);
 }
 
-.onyx-button:active:not([disabled]) {
+.onyx-button:active:hover:not([disabled]) {
 	background-image: url(../../images/gradient-invert.png);
 	background-position: top;
 	border-top: 1px solid rgba(15, 15, 15, 0.6);
