--- a/source/css/ProgressBar.css
+++ b/source/css/ProgressBar.css
@@ -1,19 +1,21 @@
 .onyx-progress-bar {
 	margin: 8px;
 	height: 8px;
-	border-radius: 4px;
+	border: 1px solid rgba(15, 15, 15, 0.2);
+	border-radius: 3px;
 	background: #B8B8B8 url(../../images/gradient-invert.png) repeat-x;
 	background-size: auto 100%;
 }
 
 .onyx-progress-bar-bar {
-	height: 8px;
-	border-radius: 4px;
+	height: 100%;
+	border-radius: 3px;
 	background: #58ABEF url(../../images/gradient.png) repeat-x;
 	background-size: auto 100%;
 }
 
 .onyx-progress-bar-bar.striped {
+	background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.15)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.15)), color-stop(0.75, rgba(255, 255, 255, 0.15)), color-stop(0.75, transparent), to(transparent));
 	background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-image: -moz-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-image: -ms-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -53,4 +55,14 @@
   to {
     background-position: 40px 0;
   }
+}
+
+/* optional */
+
+.onyx-dark {
+	background-color: #626368;
+}
+
+.onyx-light {
+	background-color: #cacaca;
 }
