--- a/source/css/Toolbar.css
+++ b/source/css/Toolbar.css
@@ -19,6 +19,7 @@
 	display: inline-block;
 	vertical-align: middle;
 	margin: 4px 6px 5px;
+	box-sizing: border-box;
 }
 
 .onyx-toolbar .onyx-icon-button {
@@ -31,6 +32,7 @@
 	border-color: rgba(15, 15, 15, 0.5);
 	margin-top: 0;
 	margin-bottom: 0;
+	height: 36px;
 }
 
 .onyx-toolbar .onyx-input-decorator {
