--- a/source/css/RichText.css
+++ b/source/css/RichText.css
@@ -7,6 +7,8 @@
 	cursor: pointer;
 	background-color: transparent;
 	font-size: 16px;
+	min-height: 20px;
+	min-width: 100px;
 	box-shadow: none;
 	/* FIXME: hack for styling reset on Android */
 	/* -webkit-appearance: caret;*/
