Slider: make tap area larger and add a property tappable to allow (default) changing value by tapping an arbitrary position on the bar.

--- a/source/css/Slider.css
+++ b/source/css/Slider.css
@@ -1,6 +1,14 @@
 .onyx-slider {
+	position: relative;
 	margin: 8px 20px;
-} 
+}
+
+.onyx-slider-taparea {
+	position: absolute;
+	top: -11px;
+	height: 28px;
+	width: 100%;
+}
 
 .onyx-slider-knob {
 	position: relative;
