--- a/source/css/Tooltip.css
+++ b/source/css/Tooltip.css
@@ -1,6 +1,5 @@
 .onyx-tooltip {
 	z-index: 20;
-	top: 100%;
 	left: 0;
 	padding: 4px 6px;
 	margin-top: 4px;
@@ -10,14 +9,61 @@
 	color: white;
 	background: #216593 url(../../images/gradient.png) repeat-x 0 bottom;
 	border-radius: 3px;
+	white-space: nowrap;
 }
 
+/*move the tooltip over to the right when displaying the right arrow so it aligns better with the decorator*/
+.onyx-tooltip.rightArrow {
+	left: 30px;
+}
+
+/*prep the left & right arrows using before & after - left arrow uses before & right arrow uses after*/
 .onyx-tooltip::before {
 	content: '';
 	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
-	border-bottom: 6px solid #1D587F;
 	position: absolute;
 	top: -6px;
 	left: 16px;
+}
+
+.onyx-tooltip::after {
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	position: absolute;
+	top: -6px;
+	margin-left: -12px;	
+}
+
+/*The following 3 rules handle the left & right arrows when the tooltip is displayed below the activator*/
+.onyx-tooltip.below {
+	top: 100%;
+}
+
+.onyx-tooltip.below.rightArrow::after {
+	border-bottom: 6px solid #1D587F;
+	top: -6px;
+}
+
+.onyx-tooltip.below.leftArrow::before {
+	border-bottom: 6px solid #1D587F;
+	top: -6px;
+}
+
+/*The following 3 rules handle the left & right arrows when the tooltip is displayed above the activator*/
+.onyx-tooltip.above {
+	top: -100%;
+}
+
+.onyx-tooltip.above.rightArrow::after {
+	content: '';
+	border-top: 6px solid #1D587F;
+	top: 100%;
+}
+
+.onyx-tooltip.above.leftArrow::before {
+	content: '';
+	border-top: 6px solid #1D587F;
+	top: 100%;
 }
