--- a/source/css/Tooltip.css
+++ b/source/css/Tooltip.css
@@ -13,7 +13,7 @@
 }
 
 /*move the tooltip over to the right when displaying the right arrow so it aligns better with the decorator*/
-.onyx-tooltip.rightArrow {
+.onyx-tooltip.right-arrow {
 	left: 30px;
 }
 
@@ -41,12 +41,12 @@
 	top: 100%;
 }
 
-.onyx-tooltip.below.rightArrow::after {
+.onyx-tooltip.below.right-arrow::after {
 	border-bottom: 6px solid #1D587F;
 	top: -6px;
 }
 
-.onyx-tooltip.below.leftArrow::before {
+.onyx-tooltip.below.left-arrow::before {
 	border-bottom: 6px solid #1D587F;
 	top: -6px;
 }
@@ -56,13 +56,13 @@
 	top: -100%;
 }
 
-.onyx-tooltip.above.rightArrow::after {
+.onyx-tooltip.above.right-arrow::after {
 	content: '';
 	border-top: 6px solid #1D587F;
 	top: 100%;
 }
 
-.onyx-tooltip.above.leftArrow::before {
+.onyx-tooltip.above.left-arrow::before {
 	content: '';
 	border-top: 6px solid #1D587F;
 	top: 100%;
