Add scrim styles for IE8
IE8 support fixes for Popup sample

--- a/source/css/Scrim.css
+++ b/source/css/Scrim.css
@@ -10,7 +10,9 @@
 
 .onyx-scrim.onyx-scrim-translucent{
 	pointer-events: auto;
-	background: rgba(0, 0, 0, 0.65);
+	background-color: rgb(0,0,0);
+	opacity: 0.65;
+	filter: alpha(opacity=65);
 }
 
 .onyx-scrim.onyx-scrim-transparent {
