--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -853,7 +853,7 @@ button.onyx-button.onyx-blue {
 	min-height: 40px;
 }
 
-/* Spinner.css"
+/* Spinner.css */
 .onyx-spinner {
 	width: 58px;
 	height: 59px;
@@ -863,4 +863,30 @@ button.onyx-button.onyx-blue {
 
 .onyx-spinner.onyx-light {
 	background: url(../../images/spinner-light.gif) no-repeat 0 0;
+}
+
+/* MoreToolbar.css */
+.onyx-more-toolbar {
+	overflow: visible;
+	position: relative;
+	z-index: 10;
+}
+
+.onyx-more-menu {
+	left: auto;
+	right: 0px;
+	min-width: 0;
+}
+
+.onyx-more-toolbar .onyx-more-menu > * {
+	float: right;
+	clear: both;
+	margin: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.onyx-more-button {
+	background-image: url(../../images/more.png);
+	margin: 4px 6px 5px;
 }
