--- a/samples/sample.css
+++ b/samples/sample.css
@@ -28,3 +28,8 @@
 	vertical-align:middle; 
 	padding-left:5px;
 }
+.onyx-sample-label {
+	color: #1879CD;
+	font-size: 18px;
+	text-transform: uppercase;
+}
