Fix for ENYO-709
Add a rule to set the currently active more toolbar (ie menu is open)
z-index a little higher than any other more toolbar.

--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -872,6 +872,10 @@ button.onyx-button.onyx-blue {
 	z-index: 10;
 }
 
+.onyx-more-toolbar.active {
+	z-index:11;
+}
+
 .onyx-more-menu {
 	left: auto;
 	right: 0px;
