Fix for ENYO-720
Added generic .onyx-[color] styles for blue, affirmative/green, and negative/red to onyx.css; additional examples of colored ProgressBars and Sliders

--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -108,7 +108,7 @@
 
 /* optional */
 
-button.onyx-button.onyx-affirmative {
+/*button.onyx-button.onyx-affirmative {
 	background-color: #91BA07;
 	color: #F1F1F1;
 }
@@ -121,7 +121,7 @@ button.onyx-button.onyx-negative {
 button.onyx-button.onyx-blue {
 	background-color: #35A8EE;
 	color: #F1F1F1;
-}
+}*/
 
 /* Checkbox.css */
 .onyx-checkbox {
@@ -889,4 +889,20 @@ button.onyx-button.onyx-blue {
 .onyx-more-button {
 	background-image: url(../../images/more.png);
 	margin: 4px 6px 5px;
+}
+
+/* some default colors */
+.onyx-blue {
+	background-color: #35A8EE;
+	color: #F1F1F1;
+}
+
+.onyx-affirmative, .onyx-green {
+	background-color: #91BA07;
+	color: #F1F1F1;
+}
+
+.onyx-negative, .onyx-red {
+	background-color: #C51616;
+	color: #F1F1F1;
 }
