Fix for ENYO-534: add disabled state for onyx.Icon and onyx.IconButton
Enyo-DCO-1.0-Signed-off-by: Dave Freeman <Dave.Freeman@palm.com>

added disabled state to onyx.Icon and adapted onyx.IconButton to return from the tap handler without tripping the active state if disabled

--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -35,6 +35,11 @@
 	background-position: 0 -32px;
 }
 
+.onyx-icon.disabled {
+	opacity: 0.4;
+	filter: alpha(opacity=40);
+}
+
 /* Button.css */
 .onyx-button {
 	outline: 0;
