ENYO-840: specified .onyx-button more in the selectors for various onyx-colors
Enyo-DCO-1.0-Signed-off-by: Dave Freeman <Dave.Freeman@palm.com>

--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -876,16 +876,11 @@
 
 /* some default colors */
 .onyx-dark {
-	background-color: #626368;
+	background-color: #555656;
 }
 
 .onyx-light {
 	background-color: #cacaca;
-}
-
-.onyx-blue {
-	background-color: #35A8EE;
-	color: #F1F1F1;
 }
 
 .onyx-green {
@@ -896,17 +891,31 @@
 	background-color: #C51616;
 }
 
-.onyx-affirmative {
-	background-color: #91BA07;
-	color: #F1F1F1;
+.onyx-blue {
+	background-color: #35A8EE;
 }
 
-.onyx-negative {
+.onyx-button.onyx-blue {
+	background-color: #35A8EE;
+	color: #F2F2F2;
+}
+
+.onyx-button.onyx-affirmative {
+	background-color: #91BA07;
+	color: #F2F2F2;
+}
+
+.onyx-button.onyx-negative {
 	background-color: #C51616;
-	color: #F1F1F1;
+	color: #F2F2F2;
 }
 
 .onyx-button.onyx-dark {
 	background-color: #555656;
 	color: #F2F2F2;
+}
+
+.onyx-button.onyx-light {
+	background-color: #cacaca;
+	color: #2F2F2F;
 }
