ENYO-982: Add RangeSlider Control
Enyo-DCO-1.0-Signed-off-by: Jeremy Thomas <jeremy.thomas@palm.com>

--- a/source/css/onyx.css
+++ b/source/css/onyx.css
@@ -821,6 +821,10 @@
 	background-position: 0 -40px;
 }
 
+.onyx-range-slider-knob {
+	top: -17px;
+}
+
 /* Item.css */
 .onyx-item {
 	padding: 14px;
