--- a/css/RangeSlider.less
+++ b/css/RangeSlider.less
@@ -2,3 +2,9 @@
 .onyx-range-slider-knob {
 	top: -17px;
 }
+.onyx-range-slider-label {
+	position: relative;
+	top: -18px;
+	text-align: center;
+	white-space: nowrap;
+}
