--- a/css/onyx.css
+++ b/css/onyx.css
@@ -783,6 +783,12 @@
 .onyx-range-slider-knob {
   top: -17px;
 }
+.onyx-range-slider-label {
+  position: relative;
+  top: -18px;
+  text-align: center;
+  white-space: nowrap;
+}
 /* Item.css */
 .onyx-item {
   padding: 14px;
