--- a/css/onyx.css
+++ b/css/onyx.css
@@ -1,3 +1,11 @@
+/* WARNING: This is a generated file for backward-compatibility.  Most      */
+/* usrs should instead modify LESS files.  If you choose to edit this CSS   */
+/* directly rather than LESS files, you should make sure less.xx.yy.min.js  */
+/* is commented out in your debug.html, and run deploy.sh/bat using the     */
+/* '-c' flag to disable LESS compilation.  This will force the loader and   */
+/* minifier to fall back to using CSS files in place of the same-name       */
+/* LESS file.                                                               */
+
 /* Onyx default parameters defined here */
 /* Fonts */
 /* ---------------------------------------*/
@@ -134,6 +142,26 @@
 }
 .onyx-button > img {
   padding: 0px 3px;
+}
+.onyx-button.onyx-blue {
+  background-color: #35A8EE;
+  color: #F2F2F2;
+}
+.onyx-button.onyx-affirmative {
+  background-color: #91BA07;
+  color: #F2F2F2;
+}
+.onyx-button.onyx-negative {
+  background-color: #C51616;
+  color: #F2F2F2;
+}
+.onyx-button.onyx-dark {
+  background-color: #555656;
+  color: #F2F2F2;
+}
+.onyx-button.onyx-light {
+  background-color: #cacaca;
+  color: #2F2F2F;
 }
 /* Checkbox.css */
 .onyx-checkbox {
@@ -882,24 +910,4 @@
 }
 .onyx-blue {
   background-color: #35A8EE;
-}
-.onyx-button.onyx-blue {
-  background-color: #35A8EE;
-  color: #F2F2F2;
-}
-.onyx-button.onyx-affirmative {
-  background-color: #91BA07;
-  color: #F2F2F2;
-}
-.onyx-button.onyx-negative {
-  background-color: #C51616;
-  color: #F2F2F2;
-}
-.onyx-button.onyx-dark {
-  background-color: #555656;
-  color: #F2F2F2;
-}
-.onyx-button.onyx-light {
-  background-color: #cacaca;
-  color: #2F2F2F;
 }
