Remove focus-inner-border in Firefox-Windows
This removes a Windows-only issue, where Firefox draws an inner-border
on focused buttons.

Enyo-DCO-1.1-Signed-off-by: Jeremy Thomas <jeremy.thomas@palm.com>

--- a/css/onyx.css
+++ b/css/onyx.css
@@ -143,6 +143,10 @@
 .onyx-button > img {
   padding: 0px 3px;
 }
+/* Remove the focused inner-border style in Firefox (Windows) */
+.onyx-button::-moz-focus-inner {
+  border: 0;
+}
 /* Checkbox.css */
 .onyx-checkbox {
   cursor: pointer;
