--- a/css/Button.less
+++ b/css/Button.less
@@ -64,3 +64,8 @@
 .onyx-button > img {
 	padding: 0px 3px;
 }
+
+/* Remove the focused inner-border style in Firefox (Windows) */
+.onyx-button::-moz-focus-inner {
+  border: 0;
+}
