--- a/css/onyx.css
+++ b/css/onyx.css
@@ -74,19 +74,13 @@
 /* Button.css */
 .onyx-button {
   outline: 0;
-  /**/
-
   color: #292929;
   font-size: 16px;
   text-align: center;
   white-space: nowrap;
-  /**/
-
   margin: 0;
   padding: 6px 18px;
   overflow: hidden;
-  /**/
-
   border-radius: 3px;
   /* for IE8 */
 
@@ -103,9 +97,7 @@
   /* border-bottom: 1px solid rgba(15, 15, 15, 0.5); */
 
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);
-  /**/
-
-  background: #e1e1e1 url(../images/gradient.png) repeat-x bottom;
+  background: #e1e1e1 url(./../images/gradient.png) repeat-x bottom;
   background-size: contain;
   /**/
 
@@ -125,13 +117,13 @@
 	the effect is as if .onyx-button.active doesn't exist
 */
 .onyx-button.active {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url(./../images/gradient-invert.png);
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
 }
 .onyx-button:active:hover:not([disabled]) {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url(./../images/gradient-invert.png);
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
@@ -152,7 +144,7 @@
   cursor: pointer;
   height: 32px;
   width: 32px;
-  background: url(../images/checkbox.png) no-repeat;
+  background: url(./../images/checkbox.png) no-repeat;
   /* reset for ? */
 
   margin: 0px;
@@ -169,7 +161,7 @@
 }
 /* Grabber.css */
 .onyx-grabber {
-  background: url(../images/grabbutton.png) no-repeat center;
+  background: url(./../images/grabbutton.png) no-repeat center;
   width: 23px;
   height: 27px;
 }
@@ -181,7 +173,7 @@
   border-radius: 8px;
   padding: 6px;
   color: #ffffff;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 bottom;
 }
 .onyx-popup-decorator {
   position: relative;
@@ -215,8 +207,6 @@
 }
 .onyx-groupbox-header {
   padding: 2px 10px;
-  /**/
-
   color: #ffffff;
   font-size: 14px;
   font-weight: bold;
@@ -225,7 +215,7 @@
 
   background-color: #4c4c4c;
   border: none;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 10px;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 10px;
 }
 .onyx-groupbox .onyx-input-decorator {
   display: block;
@@ -325,6 +315,17 @@
   margin: 6px 0;
   padding: 0;
   border-bottom: 1px solid #aaa;
+}
+.onyx-menu-label {
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  user-select: none;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+.onyx-menu-label:hover {
+  background: none;
 }
 /* customize a toolbar to support menus */
 .onyx-menu-toolbar,
@@ -440,14 +441,12 @@
   padding: 8px 12px;
   margin: 0;
   outline: 0;
-  /**/
-
   font-size: 16px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
   /**/
 
-  background: #e7e7e7 url(../images/gradient.png) repeat-x bottom;
+  background: #e7e7e7 url(./../images/gradient.png) repeat-x bottom;
   /* IE8 */
 
   border: 1px solid #333333;
@@ -469,7 +468,7 @@
 }
 .onyx-radiobutton.active {
   color: #ffffff;
-  background: #0091f2 url(../images/gradient-invert.png) repeat-x top;
+  background: #0091f2 url(./../images/gradient-invert.png) repeat-x top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -512,7 +511,7 @@
 
   border-radius: 3px;
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.4);
-  background: #8bba3d url(../images/gradient-invert.png) repeat-x bottom;
+  background: #8bba3d url(./../images/gradient-invert.png) repeat-x bottom;
   background-size: auto 100%;
   /* label */
 
@@ -530,7 +529,7 @@
   height: 30px;
   margin: 1px;
   border-radius: 3px;
-  background: #f6f6f6 url(../images/gradient.png) repeat-x;
+  background: #f6f6f6 url(./../images/gradient.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-toggle-button .onyx-toggle-button-knob {
@@ -569,10 +568,8 @@
 	*/
 
   padding: 9px 8px 10px 8px;
-  /**/
-
   border: 1px solid #3A3A3A;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 bottom;
   background-size: contain;
   color: #ffffff;
   /**/
@@ -627,7 +624,7 @@
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: #ffffff;
-  background: #216593 url(../images/gradient.png) repeat-x 0 bottom;
+  background: #216593 url(./../images/gradient.png) repeat-x 0 bottom;
   border-radius: 3px;
   white-space: nowrap;
 }
@@ -684,13 +681,13 @@
   height: 8px;
   border: 1px solid rgba(15, 15, 15, 0.2);
   border-radius: 3px;
-  background: #b8b8b8 url(../images/gradient-invert.png) repeat-x;
+  background: #b8b8b8 url(./../images/gradient-invert.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar {
   height: 100%;
   border-radius: 3px;
-  background: #58abef url(../images/gradient.png) repeat-x;
+  background: #58abef url(./../images/gradient.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar.striped {
@@ -784,7 +781,7 @@
   position: relative;
   height: 40px;
   width: 40px;
-  background: url(../images/slider-handle.png) left top no-repeat;
+  background: url(./../images/slider-handle.png) left top no-repeat;
   margin: -23px -20px;
 }
 .onyx-slider-knob.active,
@@ -828,10 +825,10 @@
   width: 59px;
   height: 58px;
   display: inline-block;
-  background: url(../images/spinner-dark.gif) no-repeat 0 0;
+  background: url(./../images/spinner-dark.gif) no-repeat 0 0;
 }
 .onyx-spinner.onyx-light {
-  background: url(../images/spinner-light.gif) no-repeat 0 0;
+  background: url(./../images/spinner-light.gif) no-repeat 0 0;
 }
 /* MoreToolbar.css */
 .onyx-more-toolbar {
@@ -855,7 +852,7 @@
   margin-bottom: 5px;
 }
 .onyx-more-button {
-  background-image: url(../images/more.png);
+  background-image: url(./../images/more.png);
   width: 32px;
   height: 32px;
 }
