Added override to onyx.Toolbar styling to properly handle FittableColumnsLayout being applied to the toolbar Enyo-DCO-1.1-Signed-off-by: Ian Beck <ian@onecrayon.com>

--- a/css/onyx.css
+++ b/css/onyx.css
@@ -578,7 +578,8 @@
   overflow: hidden;
   font-size: 20px;
 }
-.onyx-toolbar-inline > * {
+.onyx-toolbar-inline > *,
+.enyo-fittable-columns-layout.onyx-toolbar-inline > * {
   display: inline-block;
   vertical-align: middle;
   margin: 4px 6px 5px;
