--- a/samples/sample.css
+++ b/samples/sample.css
@@ -27,6 +27,7 @@
 .onyx-sample-animate-label {
 	vertical-align:middle; 
 	padding-left:5px;
+	margin-right: 15px;
 }
 .onyx-sample-label {
 	color: #1879CD;
