--- a/css/ContextualPopup.less
+++ b/css/ContextualPopup.less
@@ -38,6 +38,7 @@
 /*for popups above activator*/
 .onyx-contextual-popup.vertical.above {
   top: auto;
+  margin-top:-10px;
   bottom: 100%;
   margin-bottom: 10px;
 }
