--- a/css/onyx.css
+++ b/css/onyx.css
@@ -954,6 +954,7 @@
 /*for popups above activator*/
 .onyx-contextual-popup.vertical.above {
   top: auto;
+  margin-top:-10px;
   bottom: 100%;
   margin-bottom: 10px;
 }
