--- a/css/onyx.css
+++ b/css/onyx.css
@@ -97,7 +97,7 @@
   /* border-bottom: 1px solid rgba(15, 15, 15, 0.5); */
 
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.2);
-  background: #e1e1e1 url(../images/gradient.png) repeat-x bottom;
+  background: #e1e1e1 url(./../images/gradient.png) repeat-x bottom;
   background-size: contain;
   /**/
 
@@ -117,13 +117,13 @@
 	the effect is as if .onyx-button.active doesn't exist
 */
 .onyx-button.active {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url(./../images/gradient-invert.png);
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
 }
 .onyx-button:active:hover:not([disabled]) {
-  background-image: url(../images/gradient-invert.png);
+  background-image: url(./../images/gradient-invert.png);
   background-position: top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 0px 1px 0px rgba(0, 0, 0, 0.1);
@@ -144,7 +144,7 @@
   cursor: pointer;
   height: 32px;
   width: 32px;
-  background: url(../images/checkbox.png) no-repeat;
+  background: url(./../images/checkbox.png) no-repeat;
   /* reset for ? */
 
   margin: 0px;
@@ -161,7 +161,7 @@
 }
 /* Grabber.css */
 .onyx-grabber {
-  background: url(../images/grabbutton.png) no-repeat center;
+  background: url(./../images/grabbutton.png) no-repeat center;
   width: 23px;
   height: 27px;
 }
@@ -173,7 +173,7 @@
   border-radius: 8px;
   padding: 6px;
   color: #ffffff;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 bottom;
 }
 .onyx-popup-decorator {
   position: relative;
@@ -215,7 +215,7 @@
 
   background-color: #4c4c4c;
   border: none;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 10px;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 10px;
 }
 .onyx-groupbox .onyx-input-decorator {
   display: block;
@@ -446,7 +446,7 @@
   text-align: center;
   /**/
 
-  background: #e7e7e7 url(../images/gradient.png) repeat-x bottom;
+  background: #e7e7e7 url(./../images/gradient.png) repeat-x bottom;
   /* IE8 */
 
   border: 1px solid #333333;
@@ -468,7 +468,7 @@
 }
 .onyx-radiobutton.active {
   color: #ffffff;
-  background: #0091f2 url(../images/gradient-invert.png) repeat-x top;
+  background: #0091f2 url(./../images/gradient-invert.png) repeat-x top;
   border-top: 1px solid rgba(15, 15, 15, 0.6);
   box-shadow: inset 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -511,7 +511,7 @@
 
   border-radius: 3px;
   box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.4);
-  background: #8bba3d url(../images/gradient-invert.png) repeat-x bottom;
+  background: #8bba3d url(./../images/gradient-invert.png) repeat-x bottom;
   background-size: auto 100%;
   /* label */
 
@@ -529,7 +529,7 @@
   height: 30px;
   margin: 1px;
   border-radius: 3px;
-  background: #f6f6f6 url(../images/gradient.png) repeat-x;
+  background: #f6f6f6 url(./../images/gradient.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-toggle-button .onyx-toggle-button-knob {
@@ -569,13 +569,13 @@
 
   padding: 9px 8px 10px 8px;
   border: 1px solid #3A3A3A;
-  background: #4c4c4c url(../images/gradient.png) repeat-x 0 bottom;
+  background: #4c4c4c url(./../images/gradient.png) repeat-x 0 bottom;
   background-size: contain;
   color: #ffffff;
   /**/
 
   white-space: nowrap;
-  overflow: hidden;
+  overflow-y: visible;
   font-size: 20px;
 }
 .onyx-toolbar-inline > *,
@@ -616,7 +616,8 @@
 .onyx-toolbar .onyx-input-decorator .onyx-input:focus::-webkit-input-placeholder {
   color: #dddddd;
 }
-/* Tooltip.css */.onyx-tooltip {
+/* Tooltip.css */
+.onyx-tooltip {
   z-index: 20;
   left: 0;
   padding: 4px 6px;
@@ -625,7 +626,7 @@
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(0, 0, 0, 0.2);
   color: #ffffff;
-  background: #216593 url(../images/gradient.png) repeat-x 0 bottom;
+  background: #216593 url(./../images/gradient.png) repeat-x 0 bottom;
   border-radius: 3px;
   white-space: nowrap;
 }
@@ -682,13 +683,13 @@
   height: 8px;
   border: 1px solid rgba(15, 15, 15, 0.2);
   border-radius: 3px;
-  background: #b8b8b8 url(../images/gradient-invert.png) repeat-x;
+  background: #b8b8b8 url(./../images/gradient-invert.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar {
   height: 100%;
   border-radius: 3px;
-  background: #58abef url(../images/gradient.png) repeat-x;
+  background: #58abef url(./../images/gradient.png) repeat-x;
   background-size: auto 100%;
 }
 .onyx-progress-bar-bar.striped {
@@ -782,7 +783,7 @@
   position: relative;
   height: 40px;
   width: 40px;
-  background: url(../images/slider-handle.png) left top no-repeat;
+  background: url(./../images/slider-handle.png) left top no-repeat;
   margin: -23px -20px;
 }
 .onyx-slider-knob.active,
@@ -826,10 +827,10 @@
   width: 59px;
   height: 58px;
   display: inline-block;
-  background: url(../images/spinner-dark.gif) no-repeat 0 0;
+  background: url(./../images/spinner-dark.gif) no-repeat 0 0;
 }
 .onyx-spinner.onyx-light {
-  background: url(../images/spinner-light.gif) no-repeat 0 0;
+  background: url(./../images/spinner-light.gif) no-repeat 0 0;
 }
 /* MoreToolbar.css */
 .onyx-more-toolbar {
@@ -853,7 +854,7 @@
   margin-bottom: 5px;
 }
 .onyx-more-button {
-  background-image: url(../images/more.png);
+  background-image: url(./../images/more.png);
   width: 32px;
   height: 32px;
 }
@@ -898,33 +899,17 @@
   background-color: #cacaca;
   color: #2F2F2F;
 }
-/* some default colors */
-.onyx-dark {
-  background-color: #555656;
-}
-.onyx-light {
-  background-color: #cacaca;
-}
-.onyx-green {
-  background-color: #91BA07;
-}
-.onyx-red {
-  background-color: #C51616;
-}
-.onyx-blue {
-  background-color: #35A8EE;
-}
 /* ContextualPopup.css */
 .onyx-contextual-popup-title {
-  font-weight:bold;
-  padding:24px 32px 0px;
+  font-weight: bold;
+  padding: 24px 32px 0px;
 }
 .onyx-contextual-popup-scroller {
-  padding:24px 32px;
+  padding: 24px 32px;
 }
 .onyx-contextual-popup-action-buttons {
-  display:inline-block;
-  width:100%;
+  display: inline-block;
+  width: 100%;
   text-align: center;
 }
 .onyx-contextual-popup-action-button {
@@ -942,7 +927,7 @@
   background: #4c4c4c;
 }
 /*setup the nub*/
-.onyx-contextual-popup::after{
+.onyx-contextual-popup::after {
   content: '';
   position: absolute;
   top: -10px;
@@ -954,13 +939,13 @@
 /*for popups above activator*/
 .onyx-contextual-popup.vertical.above {
   top: auto;
-  margin-top:-10px;
+  margin-top: -10px;
   bottom: 100%;
   margin-bottom: 10px;
 }
 /*for popups below activator*/
 .onyx-contextual-popup.vertical.below {
-  margin-top:10px;
+  margin-top: 10px;
 }
 /*for popups on the left of the activator*/
 .onyx-contextual-popup.right.horizontal {
@@ -973,8 +958,8 @@
 /*nub positioning*/
 /*horizontally centered nub*/
 .onyx-contextual-popup.vertical::after {
-  position:absolute;
-  left:45%;
+  position: absolute;
+  left: 45%;
   border-bottom: 10px solid #4c4c4c;
   border-top: none;
   border-left: 10px solid transparent;
@@ -982,39 +967,39 @@
 }
 /*nub near horizontal left*/
 .onyx-contextual-popup.vertical.right::after {
-  left:0%;
-  margin-left:20px;
+  left: 0%;
+  margin-left: 20px;
 }
 /*nub near horizontal right*/
 .onyx-contextual-popup.vertical.left::after {
-  left:100%;
+  left: 100%;
   margin-left: -55px;
 }
 /*downward facing nub*/
 .onyx-contextual-popup.vertical.above::after {
-  top:100%;
+  top: 100%;
   border-top: 10px solid #4c4c4c;
   border-bottom: none;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
 }
 .onyx-contextual-popup.vertical.below.right::after {
-  top:0%;
-  margin-top:-10px;
+  top: 0%;
+  margin-top: -10px;
   border-bottom: 10px solid #4c4c4c;
   border-left: 10px solid transparent;
 }
 .onyx-contextual-popup.vertical.below.left::after {
-  top:0%;
-  margin-top:-10px;
+  top: 0%;
+  margin-top: -10px;
   border-right: 10px solid transparent;
 }
 /*nub positioning for left/right popups*/
 /*vertically centered nub for popups on left of activator*/
 .onyx-contextual-popup.right::after {
   left: 100%;
-  top:47%;
-  margin-right:20px;
+  top: 47%;
+  margin-right: 20px;
   border-left: 10px solid #4C4C4C;
 }
 /*nub near vertical top for popups on left of activator*/
@@ -1024,7 +1009,7 @@
 }
 /*nub near vertical bottom for popups on left of activator*/
 .onyx-contextual-popup.right.low::after {
-  top:100%;
+  top: 100%;
   margin-top: -55px;
   border-left: 10px solid #4C4C4C;
 }
@@ -1042,7 +1027,7 @@
 }
 /*nub near vertical bottom for popups on right of activator*/
 .onyx-contextual-popup.left.low::after {
-  top:100%;
+  top: 100%;
   margin-top: -55px;
   border-right: 10px solid #4C4C4C;
 }
@@ -1063,16 +1048,16 @@
   border-top-left-radius: 0px;
 }
 .onyx-contextual-popup.vertical.below.left.corner::after {
-  top:0%;
-  left:100%;
-  margin-top:-10px;
-  margin-left:-19px;
+  top: 0%;
+  left: 100%;
+  margin-top: -10px;
+  margin-left: -19px;
   border-right: 10px solid #4c4c4c;
   border-top: 10px solid transparent;
 }
 .onyx-contextual-popup.vertical.below.right.corner::after {
-  top:0%;
-  left:0%;
+  top: 0%;
+  left: 0%;
   margin-left: -1px;
   border-left: 10px solid #4c4c4c;
   border-top: 10px solid transparent;
@@ -1085,15 +1070,15 @@
   border-bottom-left-radius: 0px;
 }
 .onyx-contextual-popup.vertical.left.above.corner::after {
-  top:100%;
-  margin-left:-19px;
+  top: 100%;
+  margin-left: -19px;
   border-right: 10px solid #4C4C4C;
   border-bottom: 10px solid transparent;
   border-top: none;
 }
 .onyx-contextual-popup.vertical.right.above.corner::after {
-  top:100%;
-  left:0%;
+  top: 100%;
+  left: 0%;
   margin-left: -1px;
   border-left: 10px solid #4c4c4c;
   border-bottom: 10px solid transparent;
@@ -1107,16 +1092,16 @@
   border-bottom-right-radius: 0px;
 }
 .onyx-contextual-popup.left.low.corner::after {
-  top:100%;
-  left:0%;
+  top: 100%;
+  left: 0%;
   margin-top: -19px;
   margin-left: -12px;
   border-bottom: 10px solid #4c4c4c;
   border-right: 10px solid #4c4c4c;
 }
 .onyx-contextual-popup.right.low.corner::after {
-  top:100%;
-  left:100%;
+  top: 100%;
+  left: 100%;
   margin-top: -19px;
   border-bottom: 10px solid#4c4c4c;
   border-left: none;
@@ -1129,18 +1114,34 @@
   border-top-right-radius: 0px;
 }
 .onyx-contextual-popup.left.high.corner::after {
-  top:0%;
-  left:0%;
+  top: 0%;
+  left: 0%;
   margin-top: -1px;
   margin-left: -12px;
   border-top: 10px solid #4C4C4C;
   border-bottom: none;
 }
 .onyx-contextual-popup.right.high.corner::after {
-  top:0%;
-  left:100%;
-  margin-top:-1px;
-  margin-left:-9px;
+  top: 0%;
+  left: 100%;
+  margin-top: -1px;
+  margin-left: -9px;
   border-top: 10px solid #4C4C4C;
   border-bottom: none;
+}
+/* some default colors */
+.onyx-dark {
+  background-color: #555656;
+}
+.onyx-light {
+  background-color: #cacaca;
+}
+.onyx-green {
+  background-color: #91BA07;
+}
+.onyx-red {
+  background-color: #C51616;
+}
+.onyx-blue {
+  background-color: #35A8EE;
 }
