--- a/css/onyx-rules.less
+++ b/css/onyx-rules.less
@@ -33,6 +33,7 @@
 @import "Grabber.less";
 @import "Popup.less";
 @import "Groupbox.less";
+@import "Table.less";
 @import "Input.less";
 @import "Menu.less";
 @import "Picker.less";
