--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -9,6 +9,8 @@
 @onyx-font-size: @onyx-font-size-large;
 @onyx-groupbox-font-size: @onyx-font-size-medium;
 @onyx-groupbox-header-font-size: @onyx-font-size-small;
+@onyx-table-font-size: @onyx-font-size-medium;
+@onyx-table-header-font-size: @onyx-font-size-small;
 @onyx-input-font-size: @onyx-font-size-medium;
 @onyx-popup-font-size: @onyx-font-size-medium;
 @onyx-progressbutton-font-size: @onyx-font-size-medium;
@@ -24,6 +26,7 @@
 /* ---------------------------------------*/
 @onyx-button-text-color: #292929;
 @onyx-groupbox-text-color: white;
+@onyx-table-header-text-color: white;
 @onyx-picker-text-color: black;
 @onyx-popup-text-color: white;
 @onyx-progressbutton-text-color: #F1F1F1;
@@ -46,6 +49,7 @@
 
 @onyx-button-background: #E1E1E1;
 @onyx-groupbox-background: #4C4C4C;
+@onyx-table-background: #4C4C4C;
 @onyx-highlight-background: #DEDFDF;
 @onyx-input-background: transparent;
 @onyx-input-focused-background: white;
@@ -76,6 +80,7 @@
 
 @onyx-button-border-radius: @onyx-border-radius-tight;
 @onyx-groupbox-border-radius: @onyx-border-radius;
+@onyx-table-border-radius: @onyx-border-radius;
 @onyx-input-border-radius: @onyx-border-radius-tight;
 @onyx-menu-border-radius: @onyx-border-radius-tight;
 @onyx-progressbar-border-radius: @onyx-border-radius-tight;
@@ -106,6 +111,7 @@
 @onyx-button-active-gradient: @onyx-gradient-invert;
 @onyx-button-gradient: @onyx-gradient;
 @onyx-groupbox-gradient: @onyx-gradient;
+@onyx-table-gradient: @onyx-gradient;
 @onyx-popup-gradient: @onyx-gradient;
 @onyx-progressbar-bar-gradient: @onyx-gradient;
 @onyx-progressbar-gradient: @onyx-gradient-invert;
