Add submenu styles

--- a/css/onyx-rules.less
+++ b/css/onyx-rules.less
@@ -35,6 +35,7 @@
 @import "Groupbox.less";
 @import "Input.less";
 @import "Menu.less";
+@import "Submenu.less";
 @import "Picker.less";
 @import "TextArea.less";
 @import "RichText.less";
