ENYO-1319: added a picker at the end of the scrolled tab bar
Unfortunately, the picker goes below the tab bar when there's too many tabs

--- a/css/onyx-rules.less
+++ b/css/onyx-rules.less
@@ -41,6 +41,7 @@
 @import "RadioButton.less";
 @import "Scrim.less";
 @import "TabButton.less";
+@import "TabPanels.less";
 @import "ToggleButton.less";
 @import "Toolbar.less";
 @import "Tooltip.less";
