ENYO-2254: renamed TabPanels.css in TabBar.css

--- a/css/onyx-rules.less
+++ b/css/onyx-rules.less
@@ -41,7 +41,7 @@
 @import "RadioButton.less";
 @import "Scrim.less";
 @import "TabButton.less";
-@import "TabPanels.less";
+@import "TabBar.less";
 @import "ToggleButton.less";
 @import "Toolbar.less";
 @import "Tooltip.less";
