--- a/css/onyx-rules.less
+++ b/css/onyx-rules.less
@@ -42,6 +42,7 @@
 @import "Scrim.less";
 @import "TabButton.less";
 @import "TabBar.less";
+@import "TabBarItem.less";
 @import "ToggleButton.less";
 @import "Toolbar.less";
 @import "Tooltip.less";
