ENYO-2255: set tabbar backgroung to onyx-light-background

--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -1,5 +1,10 @@
 /* TabBar.css */
-.onyx-tab-panel-scroller .enyo-touch-scroller {
+.onyx-tab-bar {
+	background-color: @onyx-light-background;
+
+}
+
+.onyx-tab-bar-scroller .enyo-touch-scroller {
 	display: inline ;
 
 	div {
