ENYO-2255: Vastly improved look & feel of tabs

--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -1,6 +1,7 @@
 /* TabBar.css */
 .onyx-tab-bar {
 	background-color: @onyx-light-background;
+	padding-top: 3px;
 
 }
 
@@ -9,6 +10,12 @@
 
 	div {
 		display: inline;
+		padding-top: 2px;
+	}
+	hr {
+		border: 1px solid #6D6D6D;
+		border-bottom-width: 0px ;
+		margin: auto;
 	}
 }
 
