ENYO-2255: highlight button and surrounding div together

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -23,7 +23,7 @@
 		background-color: @tab-strong;
 	}
 
-	&:hover {
+	&:hover, &:hover button {
 		background-color: @tab-strong;
 	}
 
@@ -33,9 +33,6 @@
 		tab--space: nowrap;
 		background-color: @tab-inactive ;
 		&.active {
-			background-color: @tab-strong;
-		}
-		&:hover {
 			background-color: @tab-strong;
 		}
 	}
