--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -1,60 +1,65 @@
 /* TabBarItem.css */
-@tab-strong: @onyx-light-background;
-@tab-weak:   fadeout(@tab-strong,100%);
-@tab-border: darken(@tab-strong, 40%);
-@tab-inactive: darken(@tab-strong, 10%);
-
 
 .onyx-tab-item {
 
 	position: relative;
-	//top: 2px ;
-	padding: 3px;
+	display: inline;
+	bottom: -0.3em; // em is the only way to align the bottom bar for different browsers
 	border: 1px solid @tab-border;
-	margin: 2px;
-	margin-bottom: 4px;
+	margin: 0px 2px 0px 2px;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
 	background-color: @tab-inactive ;
+	z-index: 1;
+	vertical-align: baseline;
 
 	&.active {
 		border-bottom: 1px solid @tab-strong;
-		margin-bottom: -2px;
 		background-color: @tab-strong;
 	}
 
-	&:hover, &:hover button {
+	&:hover {
 		background-color: @tab-strong;
 	}
 
 	button {
 		overflow: hidden;
-		border-style: none;
+		margin: 3px;
+		border: 1px solid transparent;
 		tab--space: nowrap;
-		background-color: @tab-inactive ;
-		&.active {
-			background-color: @tab-strong;
-		}
+		background-color: transparent ;
 	}
 
+}
+
+.onyx-tab-item-gradient( @see-through, @opaque ) {
+
+	// tested
+	background: linear-gradient(to right,@opaque 0%, @see-through 100%); /* W3C */
+	background: -moz-linear-gradient(right,  @opaque 0%, @see-through 100%); /* FF3.6+ */
+	background: -webkit-linear-gradient(left, @see-through,@opaque); /* Chrome10+,Safari5.1+ */
+
+
+	// untested
+	background: -webkit-gradient(linear, right top, left top, color-stop(0%,@opaque), color-stop(100%,@see-through)); /* Chrome,Safari4+ */
+	background: -o-linear-gradient(left,  @opaque 0%,@see-through 100%); /* Opera 11.10+ */
+
+	// tested
+	background: -ms-linear-gradient(left,  @opaque 0%,@see-through 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=argb(@see-through), endColorstr=argb(@opaque),GradientType=1 ); /* IE6-9 */
 }
 
 .onyx-tab-item-dissolve {
 	display: inline-block;
 	height: 90%;
-	width: 50px;
-	top: 0;
-	right: 2px;
+	width: 2em;
+	top: 2px;
+	right: 0;
 	position: absolute;
 	
-	// tested 
-	background: -webkit-gradient(linear, right top, left top, color-stop(0%,@tab-strong), color-stop(100%,@tab-weak)); /* Chrome,Safari4+ */
+	.onyx-tab-item-gradient( fadeout(@tab-inactive,100%), @tab-inactive);
 
-	// untested
-	background: linear-gradient(to right,@tab-weak 0%, @tab-strong 100%); /* W3C */
-	background: -moz-linear-gradient(right,  @tab-strong 0%, @tab-weak 100%); /* FF3.6+ */
-	background: -webkit-linear-gradient(left, @tab-weak,@tab-strong); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left,  @tab-strong 100%,@tab-weak 0%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left,  @tab-strong 100%,@tab-weak 0%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+	&.active, &:hover {
+		.onyx-tab-item-gradient( fadeout(@tab-strong,100%), @tab-strong);
+	}
 }
