--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -7,6 +7,9 @@
 
 
 .onyx-tab-bar {
+	display: block;
+	position: relative;
+	z-index: 0;
 	background-color: @onyx-light-background;
 	padding-top: @tab-bar-top-clearance;
 }
@@ -16,7 +19,7 @@
 
 	.enyo-touch-scroller {
 		> div {
-			padding: 30px 0px 3px 0px;
+			padding: 3px 0px 3px 0px;
 			margin: 6px 0px 3px 0px;
 			width: 100%;
 		}
@@ -24,14 +27,21 @@
 }
 
 .onyx-tab-holder {
-	display: block;
-	position: relative;
-	top:0;
-	left: 0;
 	margin: 3px 0 3px 0;
 	width: 100%;
-	border: 1px solid transparent;
-	border-bottom: 1px solid @tab-border;
 	vertical-align: baseline;
 }
 
+.onyx-tab-line {
+	position: relative;
+	margin-top: -0.2em;
+	border-top: 1px solid @tab-border;
+	z-index: 2;
+}
+
+.onyx-tab-rug {
+	position: relative;
+	padding: 0.2em;
+	background-color: @tab-strong ;
+	z-index: 4;
+}
