ENYO-2255: recompiled onyx.css

--- a/css/onyx.css
+++ b/css/onyx.css
@@ -506,6 +506,9 @@
 }
 /* TabBar.css */
 .onyx-tab-bar {
+  display: block;
+  position: relative;
+  z-index: 0;
   background-color: #cacaca;
   padding-top: 3px;
 }
@@ -513,37 +516,43 @@
   padding-top: 2px;
 }
 .onyx-tab-bar-scroller .enyo-touch-scroller > div {
-  padding: 30px 0px 3px 0px;
+  padding: 3px 0px 3px 0px;
   margin: 6px 0px 3px 0px;
   width: 100%;
 }
 .onyx-tab-holder {
-  display: block;
-  position: relative;
-  top: 0;
-  left: 0;
   margin: 3px 0 3px 0;
-  width: 100%;
-  border: 1px solid transparent;
-  border-bottom: 1px solid #646464;
-  vertical-align: baseline;
+}
+.onyx-tab-line {
+  position: relative;
+  margin-top: -0.2em;
+  border-top: 1px solid #646464;
+  z-index: 2;
+}
+.onyx-tab-rug {
+  position: relative;
+  padding: 0.2em;
+  background-color: #cacaca;
+  z-index: 4;
 }
 /* TabBarItem.css */
 .onyx-tab-item {
-  position: relative;
   display: inline;
-  bottom: -0.3em;
+  position: relative;
   border: 1px solid #646464;
   margin: 0px 2px 0px 2px;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   background-color: #b1b1b1;
   z-index: 1;
+  padding-top: 0.1em;
+  padding-bottom: 0.3em ;
   vertical-align: baseline;
 }
 .onyx-tab-item.active {
   border-bottom: 1px solid #cacaca;
   background-color: #cacaca;
+  z-index: 3;
 }
 .onyx-tab-item:hover {
   background-color: #cacaca;
@@ -577,7 +586,7 @@
   background: -o-linear-gradient(left, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
   /* Opera 11.10+ */
 
-  background: -ms-linear-gradient(left, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(177, 177, 177, 0) 0%, #b1b1b1 100%);
   /* IE10+ */
 
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00b1b1b1, endColorstr=#ffb1b1b1, GradientType=1);
@@ -601,7 +610,7 @@
   background: -o-linear-gradient(left, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
   /* Opera 11.10+ */
 
-  background: -ms-linear-gradient(left, #cacaca 0%, rgba(202, 202, 202, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(202, 202, 202, 0) 0%, #cacaca 100%);
   /* IE10+ */
 
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00cacaca, endColorstr=#ffcacaca, GradientType=1);
