ENYO-2265: small css adjustments

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -25,9 +25,7 @@
 
 	button {
 		overflow: hidden;
-		margin: 3px;
 		border: 1px solid transparent;
-		tab--space: nowrap;
 		background-color: transparent ;
 	}
 
@@ -73,7 +71,7 @@
 .onyx-tab-item-close {
 	font-size: @onyx-font-size-small;
 	border-radius: 1.5em;
-	margin: 3px;
+	margin: 3px 3px 3px 0;
 	padding-right: 0.2em ;
 	padding-top: 0em ;
 	padding-left: 0.25em ;
