ENYO-2265: fix close button shape on all browser
The trick is the line-height property

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -71,19 +71,17 @@
 
 .onyx-tab-item-close {
 	font-size: @onyx-font-size-small;
-	border-radius: 1.5em;
-	margin: 3px 3px 3px 0;
-	padding-right: 0.2em ;
-	padding-top: 0em ;
-	padding-left: 0.25em ;
-	padding-bottom: 0em ;
+	border-radius: 1em;
+	margin: 3px;
+	padding: 0.3em ;
 	text-align: center;
-	display:  inline;
-
+	display:  inline-block;
+	width: 1em;
+	height: 1em;
+	line-height: 1em;
 	&:hover {
 		box-shadow: 1px 1px 1px black;
 		color: white;
 		background-color: rgb(199, 25, 25);
-		color: white ;
 	}
 }
