image-path-in-less: use @onyx-image-path for TabBarItem image

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -76,8 +76,8 @@
 	height: 16px;
 	vertical-align: middle;
 	background-repeat: no-repeat;
-	background-image: url('../images/close-inactive.png');
+	background-image: url('@{onyx-image-path}/close-inactive.png');
 	&:hover {
-		background-image: url('../images/close-active.png');
+		background-image: url('@{onyx-image-path}/close-active.png');
 	}
 }
