--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -1,3 +1,8 @@
+/* Paths */
+/* application importing Onyx Less files will have to override this  */
+/* variable. Otherwise Onyx images won't be loaded with a 404 error  */
+@onyx-image-path: '../images';
+
 /* Fonts */
 /* ---------------------------------------*/
 @onyx-font-family: 'Helvetica Neue', 'Nimbus Sans L', Arial, sans-serif;
