image-path-in-less: use @onyx-image-path for all url() calls

--- a/css/onyx-variables.less
+++ b/css/onyx-variables.less
@@ -3,6 +3,7 @@
 /* variable. Otherwise Onyx images won't be loaded with a 404 error  */
 @onyx-image-path: '../images';
 
+
 /* Fonts */
 /* ---------------------------------------*/
 @onyx-font-family: 'Helvetica Neue', 'Nimbus Sans L', Arial, sans-serif;
@@ -105,8 +106,8 @@
 
 /* Gradient Overlays */
 /* ---------------------------------------*/
-@onyx-gradient: url(@{onyx-image-path}/gradient.png);
-@onyx-gradient-invert: url(@{onyx-image-path}/gradient-invert.png);
+@onyx-gradient: url("@{onyx-image-path}/gradient.png");
+@onyx-gradient-invert: url("@{onyx-image-path}/gradient-invert.png");
 
 @onyx-button-active-gradient: @onyx-gradient-invert;
 @onyx-button-gradient: @onyx-gradient;
@@ -123,23 +124,23 @@
 
 /* Images */
 /* ---------------------------------------*/
-@onyx-checkbox-image: url(@{onyx-image-path}/checkbox.png);
+@onyx-checkbox-image: url("@{onyx-image-path}/checkbox.png");
 @onyx-checkbox-image-height: 32px;
 @onyx-checkbox-image-width: 32px;
 
-@onyx-grabber-image: url(@{onyx-image-path}/grabbutton.png);
+@onyx-grabber-image: url("@{onyx-image-path}/grabbutton.png");
 @onyx-grabber-image-height: 27px;
 @onyx-grabber-image-width: 23px;
 
-@onyx-more-toolbar-button-image: url(@{onyx-image-path}/more.png);
+@onyx-more-toolbar-button-image: url("@{onyx-image-path}/more.png");
 @onyx-more-toolbar-button-image-height: 32px;
 @onyx-more-toolbar-button-image-width: 32px;
 
-@onyx-slider-knob-image: url(@{onyx-image-path}/slider-handle.png);
+@onyx-slider-knob-image: url("@{onyx-image-path}/slider-handle.png");
 @onyx-slider-knob-image-height: 40px;
 @onyx-slider-knob-image-width: 40px;
 
-@onyx-spinner-dark-image: url(@{onyx-image-path}/spinner-dark.gif);
-@onyx-spinner-light-image: url(@{onyx-image-path}/spinner-light.gif);
+@onyx-spinner-dark-image: url("@{onyx-image-path}/spinner-dark.gif");
+@onyx-spinner-light-image: url("@{onyx-image-path}/spinner-light.gif");
 @onyx-spinner-image-width: 59px;
 @onyx-spinner-image-height: 58px;
