ENYO-2264: mask enyo-thumb that looks like dead pixels on a LCD panel

--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -17,6 +17,10 @@
 .onyx-tab-bar-scroller {
 	padding-top: 2px;
 
+	> .enyo-thumb {
+		border: 0px;
+	}
+
 	.enyo-touch-scroller {
 		> div {
 			padding: 3px 0px 3px 0px;
