ENYO-3185 : TabBar : The TabBar Item is filled the TabBar, "X" icon is broken. - modify the .less for TabBarItem
ENYO-DCO-1.1-Signed-off-by: Kiwook Shim <kiwook.shim@lge.com>

--- a/css/TabBarItem.less
+++ b/css/TabBarItem.less
@@ -55,7 +55,7 @@
 	height: 90%;
 	width: 2em;
 	top: 2px;
-	right: 1em; // to place it left of close button
+	right: 19px; // to place it left of close button
 	position: absolute;
 	
 	.onyx-tab-item-gradient( fadeout(@tab-inactive,100%), @tab-inactive);
