ENYO-2577: css for tab bar tooltip

--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -16,12 +16,15 @@
 
 .onyx-tab-bar-scroller {
 	padding-top: 2px;
+	overflow: visible;
 
 	> .enyo-thumb {
 		border: 0px;
 	}
 
 	.enyo-touch-scroller {
+		overflow: visible;
+
 		> div {
 			padding: 3px 0px 3px 0px;
 			width: 100%;
