ENYO-3185 - commit compiled css file
ENYO-DCO-1.1-Signed-off-by: Kiwook Shim <kiwook.shim@lge.com>

--- a/css/onyx.css
+++ b/css/onyx.css
@@ -575,7 +575,7 @@
   height: 90%;
   width: 2em;
   top: 2px;
-  right: 1em;
+  right: 19px;
   position: absolute;
   background: linear-gradient(to right, #b1b1b1 0%, rgba(177, 177, 177, 0) 100%);
   /* W3C */
