ENYO-3240: remove unsafe code from Ares TabBar

--- a/css/TabBar.less
+++ b/css/TabBar.less
@@ -8,7 +8,6 @@
 
 .onyx-tab-bar {
 	width: 100%;
-	position: relative;
 	z-index: 10;
 	background-color: @onyx-light-background;
 	padding-top: @tab-bar-top-clearance;
@@ -16,20 +15,15 @@
 
 .onyx-tab-bar-scroller {
 	padding-top: 2px;
-	overflow: visible;
 
 	> .enyo-thumb {
 		border: 0px;
 	}
 
-	.enyo-touch-scroller {
-		overflow: visible;
+}
 
-		> div {
-			padding: 3px 0px 3px 0px;
-			width: 100%;
-		}
-	}
+.onyx-tab-wrapper {
+	padding: 3px 0px 3px 0px;
 }
 
 .onyx-tab-line {
